--- a/nest-fastify/package.json
+++ b/nest-fastify/package.json
@@ -21,11 +21,17 @@
 	},
 	"dependencies": {
 		"@nestjs/common": "^11.0.1",
+		"@nestjs/config": "^4.0.2",
 		"@nestjs/core": "^11.0.1",
 		"@nestjs/platform-express": "^11.0.1",
 		"@nestjs/platform-fastify": "^11.1.9",
+		"@nestjs/typeorm": "^11.0.0",
+		"pg": "^8.16.3",
+		"redis": "^5.10.0",
+		"redis-om": "^0.4.7",
 		"reflect-metadata": "^0.2.2",
-		"rxjs": "^7.8.1"
+		"rxjs": "^7.8.1",
+		"typeorm": "^0.3.27"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.2.0",
