feat(users): add UsersModule with RBAC, permissions, secure super admin initialization, and user creation API
What's added:
- 🔐 Role-based access control (Super Admin, Admin, Seller, Shipper, Customer)
- 🎫 Permission system for granular access control
- 🔑 Super admin initialization via one-time key with domain whitelist
- 👤 POST /users endpoint for user creation (super admin & customers)
- 🛡️ Password security (auto-exclusion + strong validation)
- 🏗️ Domain-driven folder structure (domain/, dto/)
- 🐘 PostgreSQL native arrays for roles/permissions

Technical highlights:
- Global ValidationPipe for DTO validation
- ClassSerializerInterceptor for password exclusion
- SQL-compliant ANY() operator for role queries
- Argon2 password hashing

---
Credit: AI-assisted development with Gemini 3 Pro & Claude Sonnet 4.5 (Google Antigravity IDE)

--- a/nest-fastify/.env.example
+++ b/nest-fastify/.env.example
@@ -36,3 +36,12 @@ TYPEORM_SYNCHRONIZE=false
 # - "false" or "": Disable all logging.
 # - Comma-separated string: "query,schema,error,warn,info,log,migration"
 TYPEORM_LOG_LEVELS=query,schema,error,warn,info,log,migration
+
+#-------------------------------------------------------------------------------
+# SUPER ADMIN SETUP
+#-------------------------------------------------------------------------------
+# Key used to create the first super admin user via the /users endpoint.
+SUPER_ADMIN_INITIALIZATION_KEY=your_super_secret_initialization_key
+
+# Comma-separated list of allowed email domains for the super admin.
+ALLOWED_ADMIN_DOMAINS=example.com,mycompany.com
