--- a/nest-fastify/package.json
+++ b/nest-fastify/package.json
@@ -26,6 +26,10 @@
 		"@nestjs/platform-express": "^11.0.1",
 		"@nestjs/platform-fastify": "^11.1.9",
 		"@nestjs/typeorm": "^11.0.0",
+		"@node-rs/argon2": "^2.0.2",
+		"@paralleldrive/cuid2": "^3.0.4",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.14.3",
 		"pg": "^8.16.3",
 		"redis": "^5.10.0",
 		"redis-om": "^0.4.7",
