feat(postgres): add connection pool configuration for PostgreSQL

--- a/nest-fastify/.env.example
+++ b/nest-fastify/.env.example
@@ -11,6 +11,18 @@ POSTGRES_DB=ecommerce_backend_dev_db
 POSTGRES_USER=ecommerce_backend_dev_user
 POSTGRES_PASSWORD=your_super_secret_postgres_password
 
+# PostgreSQL connection pool size. Controls the maximum number of concurrent
+# database connections maintained by the application.
+# - Development (localhost): 10 is sufficient
+# - Production (AWS RDS db.t4g.medium): 25 recommended for HA with 6 app instances
+POSTGRES_POOL_SIZE=10
+
+# Minimum number of idle connections to keep in the pool. These connections
+# are kept warm to reduce latency for incoming requests.
+# - Development (localhost): 1 is optimal (minimal overhead)
+# - Production: 5 recommended (keeps connections ready for traffic)
+POSTGRES_MIN_POOL_SIZE=1
+
 #-------------------------------------------------------------------------------
 # REDIS
 #-------------------------------------------------------------------------------
