feat: setup better auth environment variables + generate db migration

--- a/nest-fastify/.env.example
+++ b/nest-fastify/.env.example
@@ -57,3 +57,12 @@ SUPER_ADMIN_INITIALIZATION_KEY=your_super_secret_initialization_key
 
 # Comma-separated list of allowed email domains for the super admin.
 ALLOWED_ADMIN_DOMAINS=example.com,mycompany.com
+
+#-------------------------------------------------------------------------------
+# BETTER AUTH
+#-------------------------------------------------------------------------------
+# Configuration for BetterAuth authentication service.
+# For the secret, generate a secure value for your local .env file using:
+# > openssl rand -base64 48
+BETTER_AUTH_SECRET=your_super_secret_better_auth_secret
+BETTER_AUTH_URL=http://localhost:3000
