--- a/nest-fastify/pnpm-workspace.yaml
+++ b/nest-fastify/pnpm-workspace.yaml
@@ -1,4 +1,8 @@
 onlyBuiltDependencies:
   - '@nestjs/core'
+  - '@prisma/client'
+  - '@prisma/engines'
   - argon2
+  - better-sqlite3
+  - prisma
   - unrs-resolver
