feat(infra): migrate to MikroORM and introduce backend-toolkit custom package
- Replaced TypeORM with MikroORM for better type safety and performance.
- Refactored User entity and service to use MikroORM repositories.
- Added initial database migrations (citext, user schema).
- Extracted environment variable reading logic to new `@redstrike/backend-toolkit` package.

Agent-assisted development with Google Antigravity IDE.
AI models: Claude Opus 4.5 (Thinking) & Gemini 3 Pro (High)

--- a/nest-fastify/.env.example
+++ b/nest-fastify/.env.example
@@ -36,18 +36,11 @@ REDIS_PORT=6379
 REDIS_PASSWORD=your_super_secret_redis_password
 
 #-------------------------------------------------------------------------------
-# TYPEORM
+# MIKRO-ORM
 #-------------------------------------------------------------------------------
-# We explicitly set synchronize to false to enforce the use of migrations for
-# all database schema changes. This ensures consistency between development and
-# production environments.
-TYPEORM_SYNCHRONIZE=false
-
-# Configures TypeORM's internal logging. Accepts:
-# - "true" or "all": Enable all logging.
-# - "false" or "": Disable all logging.
-# - Comma-separated string: "query,schema,error,warn,info,log,migration"
-TYPEORM_LOG_LEVELS=query,schema,error,warn,info,log,migration
+# Enable debug logging for MikroORM (shows SQL queries in console)
+# Set to "true" to see all SQL queries, "false" to disable.
+MIKRO_ORM_DEBUG=false
 
 #-------------------------------------------------------------------------------
 # SUPER ADMIN SETUP
