--- a/nest-fastify/package.json
+++ b/nest-fastify/package.json
@@ -17,29 +17,49 @@
 		"test:watch": "jest --watch",
 		"test:cov": "jest --coverage",
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-		"test:e2e": "jest --config ./test/jest-e2e.json"
+		"test:e2e": "jest --config ./test/jest-e2e.json",
+		"mikro-orm": "mikro-orm",
+		"migration:create": "mikro-orm migration:create",
+		"migration:up": "mikro-orm migration:up",
+		"migration:down": "mikro-orm migration:down",
+		"migration:list": "mikro-orm migration:list",
+		"migration:pending": "mikro-orm migration:pending",
+		"schema:create": "mikro-orm schema:create",
+		"schema:update": "mikro-orm schema:update",
+		"schema:drop": "mikro-orm schema:drop"
+	},
+	"mikro-orm": {
+		"configPaths": [
+			"./src/mikro-orm.config.ts",
+			"./dist/mikro-orm.config.js"
+		]
 	},
 	"dependencies": {
+		"@redstrike/backend-toolkit": "workspace:*",
+		"@mikro-orm/core": "6.6.1",
+		"@mikro-orm/migrations": "6.6.1",
+		"@mikro-orm/nestjs": "6.1.1",
+		"@mikro-orm/postgresql": "6.6.1",
 		"@nestjs/common": "^11.0.1",
 		"@nestjs/config": "^4.0.2",
 		"@nestjs/core": "^11.0.1",
 		"@nestjs/platform-express": "^11.0.1",
 		"@nestjs/platform-fastify": "^11.1.9",
-		"@nestjs/typeorm": "^11.0.0",
 		"@node-rs/argon2": "^2.0.2",
 		"@paralleldrive/cuid2": "^3.0.4",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.3",
+		"dotenv": "^17.2.3",
 		"pg": "^8.16.3",
 		"redis": "^5.10.0",
 		"redis-om": "^0.4.7",
 		"reflect-metadata": "^0.2.2",
-		"rxjs": "^7.8.1",
-		"typeorm": "^0.3.27"
+		"rxjs": "^7.8.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.2.0",
 		"@eslint/js": "^9.18.0",
+		"@mikro-orm/cli": "6.6.1",
 		"@nestjs/cli": "^11.0.0",
 		"@nestjs/schematics": "^11.0.0",
 		"@nestjs/testing": "^11.0.1",
